<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_detail"
    android:padding="10dp"
    tools:context=".view.activity.DetailActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/detail_poster"
            android:layout_width="200dp"
            android:contentDescription="@string/image"
            android:layout_height="300dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:src="@drawable/ic_baseline_image_24" />

        <TextView
            android:id="@+id/info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/detail_poster"
            android:layout_marginTop="10dp"
            android:text="@string/information"
            android:textColor="@color/white"            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/detail_launch_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/info"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:text="@string/launch_date" />


        <View
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/detail_launch_date"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:layout_marginBottom="10dp"
            android:background="@android:color/white" />

        <TextView
            android:id="@+id/detail_pg_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line1"
            android:textColor="@color/white"
            android:text="@string/pg_rating" />

        <TextView
            android:id="@+id/detail_user_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_below="@+id/detail_pg_rating"
            android:text="@string/user_score" />

        <View
            android:id="@+id/line2"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_below="@+id/detail_user_score"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="@android:color/white" />

        <TextView
            android:id="@+id/description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/line2"
            android:text="@string/description"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/detail_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/description"
            android:textColor="@color/white"
            android:text="@string/lorem" />

        <ImageView
            android:id="@+id/favoriteBtn"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginStart="20dp"
            android:contentDescription="@string/image"
            android:src="@drawable/ic_baseline_favorite_border_24" />

        <ProgressBar
            android:id="@+id/progress_bar"
            android:layout_width="wrap_content"
            android:layout_centerInParent="true"
            android:layout_height="wrap_content"
            android:visibility="gone"/>

    </RelativeLayout>




</ScrollView>

